@@ -21,7 +21,10 @@ package org.apache.hadoop.hdfs.server.datanode;
 
 import java.io.IOException;
 
+import org.apache.hadoop.hdfs.server.datanode.DataNode.BPOfferService;
+import org.apache.hadoop.hdfs.server.protocol.DatanodeProtocol;
 import org.apache.hadoop.hdfs.server.protocol.DatanodeRegistration;
+import org.apache.hadoop.hdfs.server.protocol.NamespaceInfo;
 
 /**
  * Utility class for accessing package-private DataNode information during tests.
@@ -36,5 +39,29 @@ public class DataNodeTestUtils {
   public static DatanodeRegistration 
   getDNRegistrationForBP(DataNode dn, String bpid) throws IOException {
     return dn.getDNRegistrationForBP(bpid);
+  }
+  
+  /**
+   * manually setup datanode to testing
+   * @param dn - datanode
+   * @param nsifno - namenode info
+   * @param bpid - block pool id
+   * @param nn - namenode object
+   * @throws IOException
+   */
+  public static void setBPNamenodeByIndex(DataNode dn,
+      NamespaceInfo nsifno, String bpid, DatanodeProtocol nn) 
+  throws IOException {
+    // setup the right BPOS..
+    BPOfferService [] bposs = dn.getAllBpOs();
+    if(bposs.length<0) {
+      throw new IOException("Datanode wasn't initializes with at least one NN");
+    }
+    for(BPOfferService bpos : bposs) {
+      bpos.setNamespaceInfo(nsifno);
+
+      dn.setBPNamenode(bpid, nn);
+      bpos.setupBPStorage();
+    }
   }
 }
